mobile response view main page ended

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Finca Libertad Pura</title>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDe_sfkXzM95R1NLtGMfD5gY8iYXScePMs&libraries=maps,marker,places,geometry&loading=async"
+      async
+      defer
+    ></script>
   </head>
   <body>
     <div id="root"></div>
